# MotherboardConstructor

./: README.md
MbConstructor/: CMakeLists.txt  addmotherboard.cpp  addmotherboard.hpp  addmotherboard.ui  components.cpp  components.hpp  config.hpp  drawer.hpp  facade.cpp  facade.hpp  facet.cpp  facet.hpp  light.cpp  light.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathelements.hpp  modgraphicsview.cpp  modgraphicsview.hpp  polygonmodel.cpp  polygonmodel.hpp  vertex.cpp  vertex.hpp
MotherboardConstructor/: CMakeLists.txt  main.cpp  mainwindow.ui  mathelements.cpp  mathelements.hpp
